--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rut.js": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
